Ajout des pages du site

--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>CV Olivier Ruff</title>
+    <title>CV Olivier Ruff - Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>olivier ruff</h1>
-    <h1>etudiant en communication</h1>
     <header>
         <nav>
             <ul>
@@ -24,8 +22,7 @@
         </nav>
     </header>
     <main>
-        <h2>Bienvenue </h2>
-        <p>Vous trouverez sur cette page mon parcours, mes compétences et quelques autres infos sur moi</p>
+    <h1>Contact</h1>
     </main>
     <footer>
     </footer>
